// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomSheetHeader renders snapshot correctly with Compact variant 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
        "height": 56,
      },
      false,
      {
        "paddingHorizontal": 16,
      },
    ]
  }
  testID="header"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Bold",
            "fontSize": 16,
            "fontWeight": 700,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "textAlign": "center",
          },
        ]
      }
      testID="header-title"
    >
      Sample Header Title
    </Text>
  </View>
</View>
`;

exports[`BottomSheetHeader renders snapshot correctly with Display variant 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
      },
      false,
      {
        "paddingHorizontal": 16,
      },
    ]
  }
  testID="header"
>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "display": "flex",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Bold",
            "fontSize": 24,
            "fontWeight": 700,
            "letterSpacing": 0,
            "lineHeight": 32,
          },
          undefined,
        ]
      }
      testID="header-title"
    >
      Sample Header Title
    </Text>
  </View>
</View>
`;

exports[`BottomSheetHeader should render snapshot correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
        "height": 56,
      },
      false,
      {
        "paddingHorizontal": 16,
      },
    ]
  }
  testID="header"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Bold",
            "fontSize": 16,
            "fontWeight": 700,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "textAlign": "center",
          },
        ]
      }
      testID="header-title"
    >
      Sample Header Title
    </Text>
  </View>
</View>
`;
